test/conformance/chainsaw/imageverificationpolicies/parse-sa/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  serviceAccountName: "invalid-sa"
  containers:
  - name: main
    image: "unauthorized-registry/myapp:latest"
