test/conformance/chainsaw/imageverificationpolicies/parse-sa/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  serviceAccountName: "valid-sa"
  containers:
  - name: main
    image: "allowed-registry/myapp:latest"
